Добавил сериализованный объект в трассу